test-suite/output/ErrorLocation_13241_2.out
File "./output/ErrorLocation_13241_2.v", line 4, characters 0-1:
Error: No product even after head-reduction.

