test-suite/output/ErrorLocation_13241_2.v
Ltac a _ := intro.
Ltac b := a ().
Goal True.
b.
Abort.
